--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+<app-header></app-header>
+<div class="container page-content center">
+  <div class="row">
+    <div class="col col-md-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
+<app-footer></app-footer>
