--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,4 +1,15 @@
-<footer>
-  <p>Copyright &copy; 2021</p>
-  <a routerLink="/about">About</a>
-</footer>
+<header class="footer">
+  <div class="container">
+    <div class="row _vc _sb">
+      <div class="col-md-2">
+        <img src="../../../../assets/images/logo.svg" class="logo lg" alt="" />
+      </div>
+      <div class="col-md-3 flex _vc _fe">
+        <div>
+          <a class="link" routerLink="/about">About</a>
+          <p>Copyright &copy; 2021</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
