--- a/src/app/components/organisms/tasks/tasks.component.html
+++ b/src/app/components/organisms/tasks/tasks.component.html
@@ -6,5 +6,6 @@
     (onDeleteTask)="deleteTask(task)"
     (onToggleReminderTask)="toggleReminderTask(task)"
     (onTaskIconChange)="toggleIconTask(task)"
+    (onChangeTaskStatus)="toggleChangeStatus(task)"
   ></app-task>
 </div>
