--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,3 @@
-
 // Body
 $body-bg: #f8fafc;
 
@@ -11,17 +10,13 @@ $line-height-base: 1.6;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
-$pink: #f66D9b;
+$pink: #f66d9b;
 $red: #e45c48;
 $orange: #f6993f;
 $yellow: #ffbc00;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-$twitter-color: #00aced;
-$facebook-color: #4864a4;
-$google-color: #4889e8;
-$github-color: #444b51;
 $black: #1a1e21;
 
 $radius: 4px;
