--- a/src/app/components/atoms/button/button.component.html
+++ b/src/app/components/atoms/button/button.component.html
@@ -1,3 +1,3 @@
-<button mat-stroked-button [color]="color" (click)="onClick()">
+<button mat-raised-button class="button" [ngClass]="color" (click)="onClick()">
   {{ text }}
 </button>
