--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,9 +1,12 @@
 <header class="page-header navbar">
-  <h1>{{ title }}</h1>
-  <app-button
-    *ngIf="hasRoute('/')"
-    color="{{ showAddTask ? 'warn' : 'primary' }}"
-    text="{{ showAddTask ? 'Close' : 'Add' }}"
-    (btnClick)="toggleAddTask()"
-  ></app-button>
+  <div class="container">
+    <img src="../../../../assets/images/logo.svg" class="logo" alt="" />
+
+    <app-button
+      *ngIf="hasRoute('/')"
+      color="{{ showAddTask ? 'warn' : 'primary' }}"
+      text="{{ showAddTask ? 'Close' : 'Add' }}"
+      (btnClick)="toggleAddTask()"
+    ></app-button>
+  </div>
 </header>
