--- a/src/app/components/layout/header/header.component.scss
+++ b/src/app/components/layout/header/header.component.scss
@@ -2,4 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 9;
+  padding: 16px 48px;
+  box-shadow: 0 1px 8px 0 rgb(26 32 36 / 12%), 0 1px 0 0 rgb(47 54 58 / 4%);
 }
