--- a/src/app/components/molecules/add-task/add-task.component.scss
+++ b/src/app/components/molecules/add-task/add-task.component.scss
@@ -1,4 +1,23 @@
-.add-form {
+.add-form-wrapper {
+  padding: 24px 0;
+  .label {
+    display: block;
+    margin-bottom: 8px;
+  }
+
+  .mat-radio-button {
+    margin-right: 12px;
+  }
+
+  .mat-form-field {
+    width: 100%;
+  }
+
+  .btn-container {
+    .reset-btn {
+      margin-right: 16px;
+    }
+  }
   .icon-select-field {
     position: relative;
 
