--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -79,6 +79,18 @@ h6 {
   font-size: 14px;
 }
 
+a.link {
+  color: $cyan;
+  text-decoration: none;
+  cursor: pointer;
+  transition: ease-out 0.3s;
+
+  &:hover {
+    font-size: 16px;
+    color: $cyan;
+  }
+}
+
 .container {
   max-width: 1200px;
 
@@ -99,14 +111,16 @@ h6 {
   }
 }
 
-.mt-100 {
-  margin-top: 100px;
+.logo {
+  height: 60px;
+
+  &.lg {
+    height: 80px;
+  }
 }
 
-.gray-card {
-  background-color: #f4f7fa;
-  border-radius: $radius;
-  margin-bottom: 30px;
+.mt-100 {
+  margin-top: 100px;
 }
 
 hr {
